Boolean_set_operations_2/demo/Boolean_set_operations_2/errors/typedef Rep<Linear_GI, Linear_polygon_set> Base 26-5 
In file included 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/PiecewiseRegionGraphicsItem.h:5:0,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/PiecewiseSetGraphicsItem.h:5,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/CircularPolygons.h:7,
                 
from /home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:57:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/PiecewiseBoundaryGraphicsItem.h: In instantiation of ‘class CGAL::Qt::Piecewise_boundary_graphics_item<CGAL::Polygon_2<Gps_linear_kernel, std::vector<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > >, std::allocator<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > > > > >, CGAL::Qt::Draw_linear_X_monotone_curve, CGAL::Qt::Linear_X_monotone_bbox>’:

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/PiecewiseRegionGraphicsItem.h:12:7:   required from ‘class CGAL::Qt::Piecewise_region_graphics_item<CGAL::Polygon_with_holes_2<Gps_linear_kernel, std::vector<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > >, std::allocator<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > > > > >, CGAL::Qt::Draw_linear_X_monotone_curve, CGAL::Qt::Linear_X_monotone_bbox>’

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/PiecewiseSetGraphicsItem.h:31:7:   required from ‘class CGAL::Qt::Piecewise_set_graphics_item<CGAL::General_polygon_set_2<CGAL::Gps_segment_traits_2<Gps_linear_kernel> >, CGAL::Qt::Draw_linear_X_monotone_curve, CGAL::Qt::Linear_X_monotone_bbox>’

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/LinearPolygons.h:131:7:   required from ‘class CGAL::Qt::Linear_set_graphics_item<CGAL::General_polygon_set_2<CGAL::Gps_segment_traits_2<Gps_linear_kernel> > >’

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:158:15:   required from ‘Rep<GI_, Set_>::Rep() [with GI_ = CGAL::Qt::Linear_set_graphics_item<CGAL::General_polygon_set_2<CGAL::Gps_segment_traits_2<Gps_linear_kernel> > >; Set_ = CGAL::General_polygon_set_2<CGAL::Gps_segment_traits_2<Gps_linear_kernel> >]’

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/Boolean_set_operations_2.cpp:280:24:   required from here

/home/apurva/Desktop/cgal-public-dev-gsoc2018-bso_demo-apurva/Boolean_set_operations_2/demo/Boolean_set_operations_2/HeaderFiles/QT5/PiecewiseBoundaryGraphicsItem.h:20:61: error: no type named ‘Curve_const_iterator’ in ‘

CGAL::Qt::Piecewise_boundary_graphics_item
	<CGAL::Polygon_2<Gps_linear_kernel, 
		std::vector<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > >, 
		std::allocator<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > > > > >, 
	CGAL::Qt::Draw_linear_X_monotone_curve, CGAL::Qt::Linear_X_monotone_bbox>
	::Piecewise_boundary 
		{aka class CGAL::Polygon_2<Gps_linear_kernel, 
			std::vector<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > >,
		 	std::allocator<CGAL::Point_2<CGAL::Cartesian<CGAL::Lazy_exact_nt<CGAL::Gmpq> > > > > >}
’
   typedef typename Piecewise_boundary::Curve_const_iterator Curve_piece_const_iterator ;
                                                             ^
CMakeFiles/Boolean_set_operations_2.dir/build.make:154: recipe for target 'CMakeFiles/Boolean_set_operations_2.dir/Boolean_set_operations_2.cpp.o' failed
make[2]: *** [CMakeFiles/Boolean_set_operations_2.dir/Boolean_set_operations_2.cpp.o] Error 1
CMakeFiles/Makefile2:515: recipe for target 'CMakeFiles/Boolean_set_operations_2.dir/all' failed
make[1]: *** [CMakeFiles/Boolean_set_operations_2.dir/all] Error 2
Makefile:94: recipe for target 'all' failed
make: *** [all] Error 2

